# SecurityCameraViedoAnalysts

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/blink_video_analyzer/: __init__.py  analyzer.py  cli.py  flet_app.py  local_yolo.py  models.py  output.py  pipeline.py  video.py
tests/: test_analyzer.py  test_output.py
