[project]
name = "blink-video-analyzer"
version = "0.1.0"
description = "Batch analyzer for Blink motion MP4 clips."
requires-python = ">=3.10,<3.13"
dependencies = [
    "flet>=0.27.0",
    "opencv-python>=4.9.0",
    "openai>=1.75.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.35.0",
    "ultralytics>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
blink-analyze = "blink_video_analyzer.cli:main"
blink-flet = "blink_video_analyzer.flet_app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
